syntax = "proto3";

package org.hiero.otter.fixtures.app;

// SPDX-License-Identifier: Apache-2.0
option java_multiple_files = true;

import "platform/event/state_signature_transaction.proto";
import "services/timestamp.proto";

message OtterTransaction {

  uint64 nonce = 1;

  oneof data {
    EmptyTransaction emptyTransaction = 100;
    OtterFreezeTransaction freezeTransaction = 101;
    com.hedera.hapi.platform.event.StateSignatureTransaction stateSignatureTransaction = 102;
    OtterIssTransaction issTransaction = 103;
  }
}

message EmptyTransaction {
}

message OtterFreezeTransaction {
  proto.Timestamp freezeTime = 1;
}

message OtterIssTransaction {
  repeated HashPartition partition = 1;
}

message HashPartition {
  repeated uint64 node_id = 1;
}

